# CG-CourseProject

./: .gitignore  CMakeLists.txt  README.md  run.sh
doc/tex/: 00-task.tex  12-intro.tex  20-analysis.tex  30-design.tex  40-impl.tex  80-conclusion.tex  81-biblio.tex  90-appendix1.tex  report.tex
doc/tex/inc/: preamble.tex  title.tex
shaders/: compile.sh
shaders/ray/: principled.comp  raytracing.comp  rt.comp  texture.vert
shaders/ray/rt_core/: bsdf.glsl  constant.glsl  entity.glsl  intersect.glsl  light.glsl  new.glsl  utils.glsl
shaders/ui/: text.frag  text.vert
src/: CMakeLists.txt  app.h  app_ui.cpp  app_vulkan.cpp  control.h  entrypoint.h  keycodes.h  main.cpp  vulkanbase.cpp  vulkanbase.h
src/Model/: camera.h  entity.h  light.h  material.h  model.h  parser.cpp  parser.h  parser_handler.h  scene.cpp  scene.h
vkbase/: CMakeLists.txt  VulkanBuffer.cpp  VulkanBuffer.h  VulkanDevice.cpp  VulkanDevice.h  VulkanInitializers.hpp  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanTexture.cpp  VulkanTexture.h  VulkanTools.cpp  VulkanTools.h  VulkanUIOverlay.cpp  VulkanUIOverlay.h
